--- a/src/layouts/RegistrationLayout/index.scss
+++ b/src/layouts/RegistrationLayout/index.scss
@@ -14,6 +14,7 @@
     align-items: center;
     .ic-header-logo {
       img {
+        transform: rotate(-45deg);
         width: 100px;
         height: 100px;
       }
