--- a/src/components/CreateAccount/CreateContributorAccount/index.scss
+++ b/src/components/CreateAccount/CreateContributorAccount/index.scss
@@ -6,6 +6,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    &.loading {
+      pointer-events: none;
+    }
+    
     .ic-name {
       font-size: 20px;
       font-weight: 600;
