--- a/src/styles/widget.scss
+++ b/src/styles/widget.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 button.MuiButton-root {
   text-transform: none !important;
 }
@@ -17,4 +19,17 @@ button.MuiButton-root {
 
 .ic-hide-form {
   display: none !important;
+}
+
+.ic-card {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
+    rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(207, 14, 14, 0.12) 0px 1px 3px 0px;
+  background-color: #fff;
+  cursor: pointer;
+
+  &.ic-selected {
+    box-shadow: $app-primary-color 0px 0px 1px 2px,
+      $app-primary-color 0px 0px 1px 2px, $app-primary-color 0px 0px 1px 2px;
+    background-color: #fff;
+  }
 }
