--- a/src/layouts/RegistrationLayout/index.scss
+++ b/src/layouts/RegistrationLayout/index.scss
@@ -11,6 +11,7 @@
   .ic-header-container {
     display: inline-flex;
     justify-content: center;
+    cursor: pointer;
     align-items: center;
     .ic-header-logo {
       img {
