--- a/src/styles/widget.scss
+++ b/src/styles/widget.scss
@@ -33,3 +33,24 @@ button.MuiButton-root {
     background-color: #fff;
   }
 }
+
+.ic-spin {
+  animation: 1.4s linear 0s infinite normal none running rotate;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.ic-readOnly {
+  .Mui-disabled,
+  &.Mui-disabled {
+    color: rgba(0, 0, 0, 0.6) !important;
+    -webkit-text-fill-color: rgba(0, 0, 0, 0.6) !important;
+  }
+}
