--- a/src/components/Dashboard/ContributorDashboard/Search/index.scss
+++ b/src/components/Dashboard/ContributorDashboard/Search/index.scss
@@ -46,9 +46,15 @@
         flex-direction: column;
         position: relative;
         .ic-tag-wrapper {
+          display: flex;
+          flex-direction: column;
           position: absolute;
           right: 0;
-          margin: 15px 10px;
+          margin: 5px 10px;
+
+          .ic-chip {
+            margin: 10px 0 0 0;
+          }
         }
 
         .ic-icon {
@@ -62,22 +68,38 @@
         .ic-content-wrapper {
           .ic-name {
             font-size: 18px;
-            font-weight: 500;
+            font-weight: 600;
             padding: 0 10px 0 15px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            color: $app-primary-color;
           }
           .ic-description {
             font-size: 14px;
             font-weight: 300;
             font-style: italic;
-            padding: 10px 10px 15px 15px;
+            padding: 5px 10px 15px 15px;
 
             @media only screen and (min-width: 650px) {
               white-space: nowrap;
               overflow: hidden;
               text-overflow: ellipsis;
+            }
+          }
+
+          .ic-org {
+            padding: 0 10px 15px 15px;
+            .ic-org-createdby {
+              color: $app-primary-color;
+              font-size: 15px;
+              font-weight: 600;
+            }
+
+            .ic-org-name {
+              padding-top: 5px;
+              font-size: 14px;
+              font-weight: 400;
             }
           }
         }
@@ -115,8 +137,9 @@
           }
 
           .ic-date {
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 400;
+            font-style: italic;
           }
         }
       }
