--- a/src/components/Dashboard/OrganizationDashboard/Completed/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/Completed/index.scss
@@ -46,9 +46,14 @@
         flex-direction: column;
         position: relative;
         .ic-tag-wrapper {
+          display: flex;
+          flex-direction: column;
           position: absolute;
           right: 0;
-          margin: 10px 15px;
+          margin: 5px 10px;
+          .ic-chip {
+            margin: 10px 0 0 0;
+          }
         }
 
         .ic-icon {
