--- a/src/components/CreateAccount/CreateOrgAccount/index.scss
+++ b/src/components/CreateAccount/CreateOrgAccount/index.scss
@@ -18,7 +18,7 @@
       position: relative;
       .ic-name {
         font-size: 20px;
-        font-weight: 600;
+        font-weight: 600 ;;
         padding: 15px 15px;
         color: $app-primary-color;
       }
