--- a/src/components/Dashboard/OrganizationDashboard/Create/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/Create/index.scss
@@ -9,7 +9,7 @@
   }
   .ic-org-body-header {
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 600 ;;
     padding: 15px 15px;
     color: $app-primary-color;
     display: flex;
