--- a/src/components/ForgotPassword/index.scss
+++ b/src/components/ForgotPassword/index.scss
@@ -8,7 +8,7 @@
     align-items: center;
     .ic-name {
       font-size: 20px;
-      font-weight: 600;
+      font-weight: 600 ;;
       padding: 15px 15px;
       color: $app-primary-color;
     }
