--- a/src/components/Dashboard/ContributorDashboard/Dialog/index.scss
+++ b/src/components/Dashboard/ContributorDashboard/Dialog/index.scss
@@ -8,7 +8,7 @@
     position: relative;
     .ic-org-body-header {
       font-size: 20px;
-      font-weight: 600;
+      font-weight: 600 ;;
       padding: 15px 15px;
       color: $app-primary-color;
     }
