--- a/src/components/Dashboard/OrganizationDashboard/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/index.scss
@@ -41,6 +41,8 @@
         margin: 0 25px;
         height: 80px;
         position: relative;
+        box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9),
+            inset 0px 0px 80px #656565;
         &:hover{
           background-color: #f9f9f9;
         }
@@ -87,7 +89,7 @@
     .ic-org-feed-container {
       .ic-org-body-header {
         font-size: 20px;
-        font-weight: 600;
+        font-weight: 600 ;;
         padding: 15px 15px;
         color: $app-primary-color;
         display: flex;
@@ -98,6 +100,8 @@
         .ic-card {
           padding: 16px 20px;
           margin: 25px 10px;
+          box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9),
+            inset 0px 0px 80px #656565;
           .ic-card-content {
             display: flex;
             justify-content: flex-start;
@@ -106,7 +110,7 @@
               color: $app-primary-color;
             }
             .ic-card-info {
-              font-size: 15px;
+              font-size: 16px;
             }
           }
         }
