--- a/src/components/Profile/ContributorProfile/index.scss
+++ b/src/components/Profile/ContributorProfile/index.scss
@@ -1,8 +1,7 @@
 @import "./../../../styles/variables";
 
 .ic-profile-wrapper {
-  box-shadow: 0em 0em 1px rgba(255, 255, 255, 0.25),
-    inset 0px 0px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
   padding: 70px 30px 30px 30px;
   position: relative;
   @media only screen and (min-width: 550px) {
@@ -30,6 +29,7 @@
       height: 80px;
       box-shadow: 0em 0em 1px $app-primary-color,
         inset 0px 0px 5px $app-primary-color;
+        
       border-radius: 50%;
     }
   }
