--- a/src/layouts/RegistrationLayout/index.scss
+++ b/src/layouts/RegistrationLayout/index.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     cursor: pointer;
     align-items: center;
+    padding-bottom: 15px;
     .ic-header-logo {
       img {
         transform: rotate(-45deg);
@@ -23,14 +24,13 @@
 
     .ic-header-name {
       font-size: 36px;
-      font-weight: 600;
+      font-weight: 600 ;;
       color: $app-primary-color;
     }
   }
 
   .ic-body-container {
-    box-shadow: 0em 0em 1px rgba(255, 255, 255, 0.25),
-      inset 0px 0px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
     padding: 10px 0 10px 0;
     height: 550px;
     margin-bottom: 20px;
