--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-weight: 500;
+}
+
+label {
+  opacity: 1 !important;
+}
+
+.ic-form-fields *, .ic-card * {
+  font-weight: 500 !important;
 }
 
 body,
@@ -25,4 +34,13 @@ body,
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.ic-cover {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  filter: grayscale(90%) blur(1px) brightness(0.8);
+  opacity: 0.3;
 }
