final dark theme v1

--- a/src/components/Dashboard/ContributorDashboard/index.scss
+++ b/src/components/Dashboard/ContributorDashboard/index.scss
@@ -41,8 +41,7 @@
         margin: 0 25px;
         height: 80px;
         position: relative;
-        box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9),
-            inset 0px 0px 80px #656565;
+        box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9), inset 0px 0px 80px #8f8f8f;
         &:hover{
           background-color: #f9f9f9;
         }
