--- a/src/components/Dashboard/OrganizationDashboard/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/index.scss
@@ -100,8 +100,7 @@
         .ic-card {
           padding: 16px 20px;
           margin: 25px 10px;
-          box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9),
-            inset 0px 0px 80px #656565;
+          box-shadow: 0em 0em 10px rgba(0, 0, 0, 0.9), inset 0px 0px 80px #8f8f8f;
           .ic-card-content {
             display: flex;
             justify-content: flex-start;
