--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,10 @@ body,
   height: 100vh;
   width: 100vw;
   background-size: cover;
-  filter: grayscale(90%) blur(1px) brightness(0.8);
+  filter: grayscale(100%) blur(1px) brightness(0.8);
   opacity: 0.3;
+  right: 0;
+  top:0;
+  bottom: 0;
+  left: 0;
 }
