--- a/src/components/Dashboard/OrganizationDashboard/Progress/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/Progress/index.scss
@@ -63,10 +63,14 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        padding: 10px;
         .ic-tag-wrapper {
           display: flex;
-          justify-content: space-evenly;
+          justify-content: flex-end;
           padding-bottom: 20px;
+          .ic-chip {
+            margin: 0 10px;
+          }
         }
 
         .ic-icon {
