--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -86,16 +86,20 @@
         @media only screen and (max-width: 650px) {
           margin: 20px;
         }
-        width: 450px;
+        width: 400px;
 
         .ic-card-content {
           display: flex;
           flex-direction: column;
           position: relative;
+          padding: 10px;
           .ic-tag-wrapper {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: flex-end;
             padding-bottom: 20px;
+            .ic-chip {
+              margin: 0 10px;
+            }
           }
 
           .ic-icon {
