--- a/src/components/Profile/OrganizerProfile/index.scss
+++ b/src/components/Profile/OrganizerProfile/index.scss
@@ -1,7 +1,8 @@
 @import "./../../../styles/variables";
 
 .ic-profile-wrapper {
-  box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
+  box-shadow: 0em 0em 1px rgba(255, 255, 255, 0.25),
+    inset 0px 0px 5px rgba(0, 0, 0, 0.25);
   padding: 70px 30px 30px 30px;
   position: relative;
   @media only screen and (min-width: 550px) {
@@ -26,7 +27,8 @@
       align-items: center;
       width: 80px;
       height: 80px;
-      box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
+      box-shadow: 0em 0em 1px $app-primary-color,
+        inset 0px 0px 5px $app-primary-color;
       border-radius: 50%;
     }
   }
@@ -36,4 +38,11 @@
       min-width: 100%;
     }
   }
+}
+
+.ic-dark .ic-profile-wrapper {
+  box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
+}
+.ic-dark .ic-profile-wrapper .ic-profile-avatar-wrapper .ic-profile-avatar {
+  box-shadow: 0em 0em 38px rgba(0, 0, 0, 0.9), inset 0px 0px 100px #656565;
 }
