--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,11 +37,16 @@ body,
 }
 
 .ic-cover {
+  display: none;
+}
+
+.ic-dark .ic-cover {
+  display: block;
   position: fixed;
   height: 100vh;
   width: 100vw;
   background-size: cover;
-  filter: grayscale(100%) blur(1px) brightness(0.8);
+  filter: grayscale(100%) blur(1px) brightness(.4);
   opacity: 0.3;
   right: 0;
   top:0;
