--- a/src/components/CreateAccount/CreateContributorAccount/index.scss
+++ b/src/components/CreateAccount/CreateContributorAccount/index.scss
@@ -13,7 +13,7 @@
     
     .ic-name {
       font-size: 20px;
-      font-weight: 600 ;;
+      font-weight: 600;
       padding: 15px 15px;
       color: $app-primary-color;
     }
