--- a/src/components/Dashboard/OrganizationDashboard/Completed/index.scss
+++ b/src/components/Dashboard/OrganizationDashboard/Completed/index.scss
@@ -84,8 +84,8 @@
         .ic-content-wrapper {
           padding-top: 20px;
           .ic-name {
-            font-size: 18px;
-            font-weight: 600;
+            font-size: 22px;
+            font-weight: 600 !important;
             padding: 0 10px 0 15px;
             white-space: nowrap;
             overflow: hidden;
