provided theme support

--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -45,9 +45,9 @@
     align-items: center;
 
     .ic-dark-icon {
-      margin-right: 15px;
     }
     .ic-signin {
+      margin-left: 10px;
       margin-right: 15px;
     }
     svg {
