--- a/src/layouts/RegistrationLayout/index.scss
+++ b/src/layouts/RegistrationLayout/index.scss
@@ -35,7 +35,7 @@
 
     .ic-header-name {
       font-size: 36px;
-      font-weight: 600 ;;
+      font-weight: 600;
       color: $app-primary-color;
     }
   }
